--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.27.0",
     "pusher-js": "^7.0.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
